# adapter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: api.rs  code_actions.rs  config.rs  diagnostics.rs  lib.rs  lsp.rs  main.rs  package_locator.rs  state.rs
