[package]
name = "vulnera-adapter"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "AGPL-3.0-or-later"
publish = false

[workspace]

[[bin]]
name = "vulnera-adapter"
path = "src/main.rs"

[lib]
name = "vulnera_adapter"
path = "src/lib.rs"

[dependencies]
# LSP
tower-lsp = "0.20.0"

# Async/runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP + serialization
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.8"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Errors
thiserror = "2.0"

# Utils
regex = "1.12"
once_cell = "1.21"
dashmap = "6.1"
